--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 
 <title>Techno akd | The home of techno Akd| Youtube</title>
+  <meta name="google-site-verification" content="8AJh76qXQPwX5qRCztTTNeMkwyCXmzYXgGtwny2IWgM" />
 
 </head>
 
