--- a/index.html
+++ b/index.html
@@ -1,82 +1,159 @@
+<!DOCTYPE html>
 <html>
-
 <head>
-<style>
-.fdsqwa{position:absolute;left:0;top:0;layer-background-color:red;background-color:blueviolet;z-index:101;}
-</style>
-
-
-
-<title>Techno akd | The home of techno Akd| Youtube</title>
+	<meta charset="UTF-8">
+  	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Technoakd| Home |YouTube videos</title>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+	<script src="js.js"></script>
+	<link rel="icon" href="img/logo.jpg" type="image/gif" sizes="16x16">
   <meta name="google-site-verification" content="8AJh76qXQPwX5qRCztTTNeMkwyCXmzYXgGtwny2IWgM" />
 </head>
-
 <body>
+	<style>
+		.sidenav
+		{
+			height: auto;
+			width: auto;
+			position: fixed;
+			top: 40%;
+			left: 0;
+			box-shadow: 2px 2px 5px blueviolet;
+			border-radius: 12px;
+			padding-top: 4rem;
+			padding-bottom: 4rem;
+			padding: 0.3em;
+			z-index: 9999999;
+			background-color: #fff;
+		}
+		.opt
+		{
+			padding: 1em;
+		}
+		nav
+		{
+			height: auto;
+			width: 100%;
+			box-shadow: 2px 2px 5px;
+			padding: .5rem;
+			position: fixed;
+			top: 0;
+			left: 0;
+			z-index: 9999999;
+			background-color: #fff;
+		}
+		.headerr
+		{
+			margin-top: 90px;
+		}
+	</style>
 
 
-<b><i><font color="black" size="7" face="Segoe Script">
-<b><div align="center"><h1><h1>Techno Akd</h1>
-</h1></div></b></font></i></b>
+		<!--main-->
+<nav>
+	<a class="navbar-brand" href="index.html">
+    <img class="rounded-circle" height="50px" width="50px" src="img/logo.jpg"><span style="padding-left: 2rem;">Techno Akd</span>
+  </a>
+</nav>
+<!--navclose-->
+<div class="sidenav">
+	<div class="opt">
+<a href="index.html">
+		<svg width="2em" height="2em" viewBox="0 0 16 16" class="bi ho bi-display" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+	<path d="M5.75 13.5c.167-.333.25-.833.25-1.5h4c0 .667.083 1.167.25 1.5H11a.5.5 0 0 1 0 1H5a.5.5 0 0 1 0-1h.75z"/>
+	<path fill-rule="evenodd" d="M13.991 3H2c-.325 0-.502.078-.602.145a.758.758 0 0 0-.254.302A1.46 1.46 0 0 0 1 4.01V10c0 .325.078.502.145.602.07.105.17.188.302.254a1.464 1.464 0 0 0 .538.143L2.01 11H14c.325 0 .502-.078.602-.145a.758.758 0 0 0 .254-.302 1.464 1.464 0 0 0 .143-.538L15 9.99V4c0-.325-.078-.502-.145-.602a.757.757 0 0 0-.302-.254A1.46 1.46 0 0 0 13.99 3zM14 2H2C0 2 0 4 0 4v6c0 2 2 2 2 2h12c2 0 2-2 2-2V4c0-2-2-2-2-2z"/>
+	</svg>
+</a>
+	</div>
+	<div class="opt">
+		<a href="contact.html">
+		<svg width="2em" height="2em" viewBox="0 0 16 16" class="bi bi-envelope-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+  <path fill-rule="evenodd" d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555zM0 4.697v7.104l5.803-3.558L0 4.697zM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586l-1.239-.757zm3.436-.586L16 11.801V4.697l-5.803 3.546z"/>
+</svg>
+</a>
+	</div>
+	<div class="opt">
+		<a href="download.html">
+		<svg width="2em" height="2em" viewBox="0 0 16 16" class="bi bi-hdd" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+  <path fill-rule="evenodd" d="M14 9H2a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-1a1 1 0 0 0-1-1zM2 8a2 2 0 0 0-2 2v1a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2v-1a2 2 0 0 0-2-2H2z"/>
+  <path d="M5 10.5a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0zm-2 0a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0z"/>
+  <path fill-rule="evenodd" d="M4.094 4a.5.5 0 0 0-.44.26l-2.47 4.532A1.5 1.5 0 0 0 1 9.51v.99H0v-.99c0-.418.105-.83.305-1.197l2.472-4.531A1.5 1.5 0 0 1 4.094 3h7.812a1.5 1.5 0 0 1 1.317.782l2.472 4.53c.2.368.305.78.305 1.198v.99h-1v-.99a1.5 1.5 0 0 0-.183-.718L12.345 4.26a.5.5 0 0 0-.439-.26H4.094z"/>
+</svg>
+</a>
+	</div>
+	<div class="opt">
+		<a href="editor.html">
+		<svg width="2em" height="2em" viewBox="0 0 16 16" class="bi bi-tools" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+  <path fill-rule="evenodd" d="M0 1l1-1 3.081 2.2a1 1 0 0 1 .419.815v.07a1 1 0 0 0 .293.708L10.5 9.5l.914-.305a1 1 0 0 1 1.023.242l3.356 3.356a1 1 0 0 1 0 1.414l-1.586 1.586a1 1 0 0 1-1.414 0l-3.356-3.356a1 1 0 0 1-.242-1.023L9.5 10.5 3.793 4.793a1 1 0 0 0-.707-.293h-.071a1 1 0 0 1-.814-.419L0 1zm11.354 9.646a.5.5 0 0 0-.708.708l3 3a.5.5 0 0 0 .708-.708l-3-3z"/>
+  <path fill-rule="evenodd" d="M15.898 2.223a3.003 3.003 0 0 1-3.679 3.674L5.878 12.15a3 3 0 1 1-2.027-2.027l6.252-6.341A3 3 0 0 1 13.778.1l-2.142 2.142L12 4l1.757.364 2.141-2.141zm-13.37 9.019L3.001 11l.471.242.529.026.287.445.445.287.026.529L5 13l-.242.471-.026.529-.445.287-.287.445-.529.026L3 15l-.471-.242L2 14.732l-.287-.445L1.268 14l-.026-.529L1 13l.242-.471.026-.529.445-.287.287-.445.529-.026z"/>
+</svg>
+</a>
+	</div>
+</div>
 
-<div id="fdswqa1" class="fdsqwa"></div>
-<div id="fdswqa2" class="fdsqwa"></div>
-<div id="fdswqa3" class="fdsqwa"></div>
-<div id="fdswqa4" class="fdsqwa"></div>
-<div id="fdswqa5" class="fdsqwa"></div>
-<div id="fdswqa6" class="fdsqwa"></div>
-<div id="fdswqa7" class="fdsqwa"></div>
-<div id="fdswqa8" class="fdsqwa"></div>
-<div id="fdswqa9" class="fdsqwa"></div>
-<div id="fdswqa10" class="fdsqwa"></div>
-<div id="fdswqa11" class="fdsqwa"></div>
-<div id="fdswqa12" class="fdsqwa"></div>
-<div id="fdswqa13" class="fdsqwa"></div>
-<div id="fdswqa14" class="fdsqwa"></div>
-<div id="fdswqa15" class="fdsqwa"></div>
-<div id="fdswqa16" class="fdsqwa"></div>
-<div id="fdswqa17" class="fdsqwa"></div>
-<div id="fdswqa18" class="fdsqwa"></div>
-<div id="fdswqa19" class="fdsqwa"></div>
-<div id="fdswqa20" class="fdsqwa"></div>
-<div id="fdswqa21" class="fdsqwa"></div>
-<div id="fdswqa22" class="fdsqwa"></div>
-<div id="fdswqa23" class="fdsqwa"></div>
-<div id="fdswqa24" class="fdsqwa"></div>
-<div id="fdswqa25" class="fdsqwa"></div>
 
-<script language="javascript" type="text/javascript">
-var fdswea=200;var fdsewa=1;var fdsera=new Array();FdszXa=24;var fdsrea=new Array();var fdsrta=document.layers?1:0;Fdszxa=FdszXa+6; fDszxa=FdszXa+Fdszxa; fdSzxa=FdszXa+Fdszxa+fDszxa; fdsZxa=fdSzxa/fDszxa*FdszXa; fdszXa=fDszxa*FdszXa/12*Fdszxa; fdszxA=FdszXa+Fdszxa/fdsZxa-16*fdSzxa; FdsXza=fdszXa*(FdszXa-5)/fDszxa+fdSzxa; Fdsxza=FdsXza/fdszxA+FdszXa*fDszxa-fdSzxa;fDsxza=(Fdsxza+FdszXa/fDszxa*fdSzxa+Fdszxa*fdsZxa)/fdszXa+FdsXza-Fdsxza-1;fdSxza=Math.floor(fDsxza)   ;fdsXza=fdSxza-35;var fdstra=document.all?1:0;var fdstya=document.getElementById&&!document.all?1:0;
-if (fdsrta){
-for (fdsyta=1;fdsyta<=fdsXza;fdsyta++){fdsera[fdsyta]=eval("document.fdswqa"+fdsyta+".clip");fdsrea[fdsyta]=eval("document.fdswqa"+fdsyta);fdsera[fdsyta].width=window.innerWidth/5;fdsera[fdsyta].height=window.innerHeight/5;}
-for (fdsyta=1;fdsyta<=5;fdsyta++)fdsrea[fdsyta].left=(fdsyta-1)*fdsera[fdsyta].width;
-for (fdsyta=6;fdsyta<=10;fdsyta++){fdsrea[fdsyta].left=(fdsyta-6)*fdsera[fdsyta].width;fdsrea[fdsyta].top=fdsera[fdsyta].height;}
-for (fdsyta=11;fdsyta<=15;fdsyta++){fdsrea[fdsyta].left=(fdsyta-11)*fdsera[fdsyta].width;fdsrea[fdsyta].top=2*fdsera[fdsyta].height;}
-for (fdsyta=16;fdsyta<=20;fdsyta++){fdsrea[fdsyta].left=(fdsyta-16)*fdsera[fdsyta].width;fdsrea[fdsyta].top=3*fdsera[fdsyta].height;}
-for (fdsyta=21;fdsyta<=fdsXza;fdsyta++){fdsrea[fdsyta].left=(fdsyta-21)*fdsera[fdsyta].width;fdsrea[fdsyta].top=4*fdsera[fdsyta].height;}}
-function fdsyua(){window.scrollTo(0,0);var fdsuya=Math.round(Math.random()*fdsXza);
-if (fdsuya==0)fdsuya=1;
-if (fdsrea[fdsuya].visibility!="hide")fdsrea[fdsuya].visibility="hide";
-else{while (fdsrea[fdsuya].visibility=="hide"){fdsuya=Math.round(Math.random()*fdsXza);
-if (fdsuya==0)fdsuya=1;}fdsrea[fdsuya].visibility="hide";}
-if (fdsewa==fdsXza)clearInterval(fdsuia);fdsewa++;fdswea-=10;}
-if (fdstra||fdstya){var fdsiua=fdstya?parseInt(window.innerWidth)/5-5 : parseInt(document.body.clientWidth/5);var fdsioa=fdstya?parseInt(window.innerHeight)/5-5 : parseInt(document.body.offsetHeight/5);
-for (fdsyta=1;fdsyta<=fdsXza;fdsyta++){fdsera[fdsyta]=fdstya?document.getElementById("fdswqa"+fdsyta).style : eval("document.all.fdswqa"+fdsyta+".style");fdsera[fdsyta].width=fdsiua;fdsera[fdsyta].height=fdsioa;}
-for (fdsyta=1;fdsyta<=5;fdsyta++)fdsera[fdsyta].left=(fdsyta-1)*fdsiua;
-for (fdsyta=6;fdsyta<=10;fdsyta++){fdsera[fdsyta].left=(fdsyta-6)*fdsiua;fdsera[fdsyta].top=fdsioa;}
-for (fdsyta=11;fdsyta<=15;fdsyta++){fdsera[fdsyta].left=(fdsyta-11)*fdsiua;fdsera[fdsyta].top=2*fdsioa;}
-for (fdsyta=16;fdsyta<=20;fdsyta++){fdsera[fdsyta].left=(fdsyta-16)*fdsiua;fdsera[fdsyta].top=3*fdsioa;}
-for (fdsyta=21;fdsyta<=fdsXza;fdsyta++){fdsera[fdsyta].left=(fdsyta-21)*fdsiua;fdsera[fdsyta].top=4*fdsioa;}}
-function fdsoia(){window.scrollTo(0,0);var fdsuya=Math.round(Math.random()*fdsXza);
-if (fdsuya==0)fdsuya=1;
-if (fdsera[fdsuya].visibility!="hidden")fdsera[fdsuya].visibility="hidden";
-else{while (fdsera[fdsuya].visibility=="hidden"){fdsuya=Math.round(Math.random()*fdsXza);
-if (fdsuya==0)fdsuya=1;}fdsera[fdsuya].visibility="hidden";}
-if (fdsewa==fdsXza){clearInterval(fdsuia);
-if (fdstya){
-for (fdsyta=1;fdsyta<26;fdsyta++)fdsera[fdsyta].display="none";}}fdsewa++;fdswea-=10;}
-if (fdsrta)fdsuia=setInterval("fdsyua()",fdswea);
-else if (fdstra||fdstya){fdsuia=setInterval("fdsoia()",fdswea);}
-</script>
+
+
+<div class="container headerr">
+	<img height="100%" width="100%" class="rounded mx-auto d-block  rounded-circle" alt="Responsive image" src="img/logo.jpg">
+
+	<div class="alert"></div>
+
+	<div class="title alert alert-success">
+		<h1 class="text-center">Techo Akd</h1>
+		<p>Techno Akd is a YouTube channel. You find latest technology gyan in HINDI language. Get latest technology videos,tech trips triks, Android knodlage,Windows knowladge,Photoshop, Video Ediing and much more about technology.</p>
+	</div>
+
+	<!--card group-->
+	<div class="container">
+<div class="card-group my-4 py-4">
+  <div class="card py-3">
+  <h3 class="text-center">Videos</h3>
+  <img src="img/bgh.jpg" alt="Responsive image" class="rounded-circle mx-auto d-block" height="200px" width="200px">
+  <p class="text-center"><i>Go to  our youtube channel for get latest technology videos about android, YouTube,Windows,Photoshop eyc. For get updates also subscribe The Techno Akd YouTube channel.</i></p>
+  <a class="mx-auto d-block" href="index.html"><button class="btn btn-primary">Watch now</button></a>
+  </div>
+
+  <div class="card py-3">
+  <h3 class="text-center">Html editor</h3>
+  <img src="img/bggg.jpg" alt="Responsive image" class="rounded-circle mx-auto d-block" height="200px" width="200px">
+  <p class="text-center"><i>Go to our Editor section where you Edit HTML,CSS,JavaScript etc.</i></p>
+  <a class="mx-auto d-block" href="editor.html"><button class="btn btn-primary">Watch now</button></a>
+  </div>
+
+  <div class="card py-3">
+  <h3 class="text-center">Contact Us</h3>
+  <img src="img/bgg.jpg" alt="Responsive image" class="rounded-circle mx-auto d-block" height="200px" width="200px">
+  <p class="text-center"><i>Contsct us. For any problem you also contact us </i></p>
+  <a class="mx-auto d-block" href="contact.html"><button class="btn btn-primary">C O N T A C T</button></a>
+  </div>
+
+</div>
+<!--card-group-end-->
+</div>
+
+
+</div>
+
+<!--mainclose-->
+
+
+
+<footer style="padding: 3rem;" class="bg-dark">
+	<h4  class="text-center">
+		<a style="text-decoration: none; color: #fff;" href="index.html">Techno Akd</a>
+	</h4>
+	<p style="color: #fff;" class="text-center">Techno Akd YouTube channel</p>
+</footer>
+
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+
 </body>
-
 </html>
+
+
+
+
