--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@
 	<div class="container">
 <div class="card-group my-4 py-4">
   <div class="card py-3">
-  <h3 class="text-center">Videos</h3>
+  <h3 class="text-center">YouTube Videos</h3>
   <img src="img/bgh.jpg" alt="Responsive image" class="rounded-circle mx-auto d-block" height="200px" width="200px">
   <p class="text-center"><i>Go to  our youtube channel for get latest technology videos about android, YouTube,Windows,Photoshop eyc. For get updates also subscribe The Techno Akd YouTube channel.</i></p>
-  <a class="mx-auto d-block" href="index.html"><button class="btn btn-primary">Watch now</button></a>
+  <a class="mx-auto d-block" href="https://www.youtube.com/channel/UCc08XFzRz9cKi-ewjV36ibw"><button class="btn btn-primary">Watch now</button></a>
   </div>
 
   <div class="card py-3">
