--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta name="description" content="Techno akd is a  youtube channel whre you find latest tecgnoloy videos on android,windows and other thing">
+  	<meta name="keywords" content="HTML, CSS, JavaScript, Youtube, android, Google, Technoakd, techno kad,latest news, Technology">
 	<meta charset="UTF-8">
   	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Technoakd| Home |YouTube videos</title>
