--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-177943716-1"></script>
+	<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+
+	gtag('config', 'UA-177943716-1');
+	</script>
 	<meta name="description" content="Techno akd is a  youtube channel whre you find latest tecgnoloy videos on android,windows and other thing">
   	<meta name="keywords" content="HTML, CSS, JavaScript, Youtube, android, Google, Technoakd, techno kad,latest news, Technology">
 	<meta charset="UTF-8">
