--- a/tacontact.html
+++ b/tacontact.html
@@ -112,7 +112,7 @@
 		<h1 class="text-center">Techno Akd Contact</h1>
 		<p>If you have any question You also contact with us with enail. You contact our official emailid <b>technoakd@gmail.com</b></p>
 		<div class="container">
-		<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdQkyz-PAvJqugoxWvUlERtXS9Vf45DTFfnbeWMyjlUSQ6chA/viewform?embedded=true" width="640" height="840" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+		<iframe width="100%" src="https://docs.google.com/forms/d/e/1FAIpQLSdQkyz-PAvJqugoxWvUlERtXS9Vf45DTFfnbeWMyjlUSQ6chA/viewform?embedded=true" width="640" height="840" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 	</div>
 		</div>
 
