--- a/index.html
+++ b/index.html
@@ -75,44 +75,66 @@
   </div>
 </nav>
 
-
-<!--contain--->
-<div style="min-height: 100vh;" class="container-fluid main-container">
-        <div class="row my-4 mx-4">
-
-        	<div class="col-md-6 col-lg-4 text-center">
-            <img class="rounded-circle" src="img/bgh.jpg" width="140px" height="140px">
-            <h2>Learn HTML in one video</h2>
-            <p>This tutoral is made for begiiner. Watch the hole video after you also leran HTML poperly.</p>
-            <a href="learn-html-in-one-video.html">
-            <button class="btn btn-outline-danger my-4">Start</button></a>
-            </div>
-
-            <div class="col-md-6 col-lg-4 text-center">
-            <img class="rounded-circle" src="img/php (1).png" width="140px" height="140px">
-            <h2>Learn PHP very easy</h2>
-            <p>After watching the post you also use PHP very easy.So you also wtach this.</p>
-            <button class="btn btn-outline-danger">Start>></button>
-            </div>
-
-
-            <div class="col-md-6 col-lg-4 text-center">
-            <img class="rounded-circle" src="img/flas.png" width="140px" height="140px">
-            <h2>Learn Flask very easy</h2>
-            <p>After watching the post you also use Flask very easy.So you also wtach this.</p>
-            <a href="fl.html"><button class="btn btn-outline-danger">Start</button></a>
-            </div>
-
-
-
-
+<div style="padding: rem;" class="slider">
+			<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+		  <div class="carousel-inner">
+		    <div class="carousel-item active">
+		      <img height="100%" width="100%" src="immg/cod.jpg" class="d-block w-100" alt="...">
+		    </div>
+		    <div class="carousel-item">
+		      <img height="100%" width="100%" src="immg/com.jpg" class="d-block w-100" alt="...">
+		    </div>
+		    <div class="carousel-item">
+		      <img height="100%" width="100%" src="immg/sr.jpg" class="d-block w-100" alt="...">
+		    </div>
+		  </div>
+		  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+		    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+		    <span class="sr-only">Previous</span>
+		  </a>
+		  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+		    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+		    <span class="sr-only">Next</span>
+		  </a>
 		</div>
 </div>
 
 
+	
+	<!--card group-->
+	<div class="container">
+<div class="card-group my-4 py-4">
+  <div class="card py-3">
+  <h3 class="text-center">Videos</h3>
+  <img src="img/bgh.jpg" alt="Responsive image" class="rounded-circle mx-auto d-block" height="200px" width="200px">
+  <p class="text-center"><i>Go to  our youtube channel for get latest technology videos about android, YouTube,Windows,Photoshop eyc. For get updates also subscribe The Techno Akd YouTube channel.</i></p>
+  <a class="mx-auto d-block" href="index.html"><button class="btn btn-primary">Watch now</button></a>
+  </div>
+
+  <div class="card py-3">
+  <h3 class="text-center">Html editor</h3>
+  <img src="img/bggg.jpg" alt="Responsive image" class="rounded-circle mx-auto d-block" height="200px" width="200px">
+  <p class="text-center"><i>Go to our Editor section where you Edit HTML,CSS,JavaScript etc.</i></p>
+  <a class="mx-auto d-block" href="editor.html"><button class="btn btn-primary">Watch now</button></a>
+  </div>
+
+  <div class="card py-3">
+  <h3 class="text-center">Contact Us</h3>
+  <img src="img/bgg.jpg" alt="Responsive image" class="rounded-circle mx-auto d-block" height="200px" width="200px">
+  <p class="text-center"><i>Contsct us. For any problem you also contact us </i></p>
+  <a class="mx-auto d-block" href="contact.html"><button class="btn btn-primary">C O N T A C T</button></a>
+  </div>
+
+</div>
+<!--card-group-end-->
+</div>
 
 
-<!--contain--->
+</div>
+
+<!--mainclose-->
+
+
 
 <footer style="padding: 3rem;" class="bg-dark">
 	<h4  class="text-center">
