--- a/index.html
+++ b/index.html
@@ -20,7 +20,55 @@
 	<link rel="icon" href="img/logo.jpg" type="image/gif" sizes="16x16">
 	<link rel="stylesheet" type="text/css" href="stylee.css">
   <meta name="google-site-verification" content="8AJh76qXQPwX5qRCztTTNeMkwyCXmzYXgGtwny2IWgM" />
-
+<style>
+	nav
+		{
+			height: auto;
+			width: 100%;
+			box-shadow: 2px 2px 5px;
+			padding: .5rem;
+			top: 0;
+			left: 0;
+			z-index: 9999999;
+			background-color: #ec2436;
+		}
+		
+		
+		.navbar-brand
+		{
+			color: #fff;
+		}
+		.navbar-brand:hover
+		{
+			color: #fff;
+		}
+		.scorl
+		{
+			display: flex;
+			color: #fff;
+			overflow-x: scroll;
+		}
+		.scorl a
+		{
+			text-decoration: none;
+			color: #fff;
+			padding-left: 1em;
+		}
+		.scorl::-webkit-scrollbar 
+		{
+  			width: 2px;
+		}
+		.scorl::-webkit-scrollbar-thumb 
+		{
+		    background: grey; 
+		    border-radius: 0px;
+		}
+		.scorl::-webkit-scrollbar-thumb 
+		{
+			background: rgba(0,0,0,0.8); 
+			border-radius: 0;
+		}
+	</style>
 
 	
 </head>
