--- a/download.html
+++ b/download.html
@@ -16,40 +16,7 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 	<script src="js.js"></script>
 	<link rel="icon" href="img/logo.jpg" type="image/gif" sizes="16x16">
-</head>
-<body>
 	<style>
-		.sidenav
-		{
-			height: auto;
-			width: auto;
-			position: fixed;
-			top: 40%;
-			left: 0;
-			box-shadow: 2px 2px 5px blueviolet;
-			border-radius: 12px;
-			padding-top: 4rem;
-			padding-bottom: 4rem;
-			padding: 0.3em;
-			z-index: 9999999;
-			background-color: #fff;
-		}
-		.opt
-		{
-			padding: 1em;
-		}
-		nav
-		{
-			height: auto;
-			width: 100%;
-			box-shadow: 2px 2px 5px;
-			padding: .5rem;
-			position: fixed;
-			top: 0;
-			left: 0;
-			z-index: 9999999;
-			background-color: #fff;
-		}
 		.headerr
 		{
 			margin-top: 90px;
@@ -58,50 +25,69 @@
 		{
 			height: 20rem;width: 100%;
 		}
+		nav
+		{
+			height: auto;
+			width: 100%;
+			box-shadow: 2px 2px 5px;
+			padding: .5rem;
+			top: 0;
+			left: 0;
+			z-index: 9999999;
+			background-color: #ec2436;
+		}
+		
+		
+		.navbar-brand
+		{
+			color: #fff;
+		}
+		.navbar-brand:hover
+		{
+			color: #fff;
+		}
+		.scorl
+		{
+			display: flex;
+			color: #fff;
+			overflow-x: scroll;
+		}
+		.scorl a
+		{
+			text-decoration: none;
+			color: #fff;
+			padding-left: 1em;
+		}
+		.scorl::-webkit-scrollbar 
+		{
+  			width: 2px;
+		}
+		.scorl::-webkit-scrollbar-thumb 
+		{
+		    background: grey; 
+		    border-radius: 0px;
+		}
+		.scorl::-webkit-scrollbar-thumb 
+		{
+			background: rgba(0,0,0,0.8); 
+			border-radius: 0;
+		}
 	</style>
-
-
-		<!--main-->
+</head>
+<body>
 <nav>
 	<a class="navbar-brand" href="index.html">
-    <img class="rounded-circle" height="50px" width="50px" src="img/logo.jpg"><span style="padding-left: 2rem;">Techno Akd</span>
+    <img class="rounded-circle" height="50px" width="50px" src="img/logo.jpg"><span style="padding-left: 2rem;"><b>Techno Akd</b></span>
   </a>
+  <div class="scorl">
+  	<a href="index.html">Home</a>
+  	<a href="video.html">Video</a>
+  	<a href="tacontact.html">Contact</a>
+  	<a href="download.html">Download</a>
+  	<a href="editor.html">Editor</a>
+  </div>
 </nav>
 <!--navclose-->
-<div class="sidenav">
-	<div class="opt">
-<a href="index.html">
-		<svg width="2em" height="2em" viewBox="0 0 16 16" class="bi ho bi-display" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-	<path d="M5.75 13.5c.167-.333.25-.833.25-1.5h4c0 .667.083 1.167.25 1.5H11a.5.5 0 0 1 0 1H5a.5.5 0 0 1 0-1h.75z"/>
-	<path fill-rule="evenodd" d="M13.991 3H2c-.325 0-.502.078-.602.145a.758.758 0 0 0-.254.302A1.46 1.46 0 0 0 1 4.01V10c0 .325.078.502.145.602.07.105.17.188.302.254a1.464 1.464 0 0 0 .538.143L2.01 11H14c.325 0 .502-.078.602-.145a.758.758 0 0 0 .254-.302 1.464 1.464 0 0 0 .143-.538L15 9.99V4c0-.325-.078-.502-.145-.602a.757.757 0 0 0-.302-.254A1.46 1.46 0 0 0 13.99 3zM14 2H2C0 2 0 4 0 4v6c0 2 2 2 2 2h12c2 0 2-2 2-2V4c0-2-2-2-2-2z"/>
-	</svg>
-</a>
-	</div>
-	<div class="opt">
-		<a href="tacontact.html">
-		<svg width="2em" height="2em" viewBox="0 0 16 16" class="bi bi-envelope-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-  <path fill-rule="evenodd" d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555zM0 4.697v7.104l5.803-3.558L0 4.697zM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586l-1.239-.757zm3.436-.586L16 11.801V4.697l-5.803 3.546z"/>
-</svg>
-</a>
-	</div>
-	<div class="opt">
-		<a href="download.html">
-		<svg width="2em" height="2em" viewBox="0 0 16 16" class="bi bi-hdd" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-  <path fill-rule="evenodd" d="M14 9H2a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-1a1 1 0 0 0-1-1zM2 8a2 2 0 0 0-2 2v1a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2v-1a2 2 0 0 0-2-2H2z"/>
-  <path d="M5 10.5a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0zm-2 0a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0z"/>
-  <path fill-rule="evenodd" d="M4.094 4a.5.5 0 0 0-.44.26l-2.47 4.532A1.5 1.5 0 0 0 1 9.51v.99H0v-.99c0-.418.105-.83.305-1.197l2.472-4.531A1.5 1.5 0 0 1 4.094 3h7.812a1.5 1.5 0 0 1 1.317.782l2.472 4.53c.2.368.305.78.305 1.198v.99h-1v-.99a1.5 1.5 0 0 0-.183-.718L12.345 4.26a.5.5 0 0 0-.439-.26H4.094z"/>
-</svg>
-</a>
-	</div>
-	<div class="opt">
-		<a href="editor.html">
-		<svg width="2em" height="2em" viewBox="0 0 16 16" class="bi bi-tools" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-  <path fill-rule="evenodd" d="M0 1l1-1 3.081 2.2a1 1 0 0 1 .419.815v.07a1 1 0 0 0 .293.708L10.5 9.5l.914-.305a1 1 0 0 1 1.023.242l3.356 3.356a1 1 0 0 1 0 1.414l-1.586 1.586a1 1 0 0 1-1.414 0l-3.356-3.356a1 1 0 0 1-.242-1.023L9.5 10.5 3.793 4.793a1 1 0 0 0-.707-.293h-.071a1 1 0 0 1-.814-.419L0 1zm11.354 9.646a.5.5 0 0 0-.708.708l3 3a.5.5 0 0 0 .708-.708l-3-3z"/>
-  <path fill-rule="evenodd" d="M15.898 2.223a3.003 3.003 0 0 1-3.679 3.674L5.878 12.15a3 3 0 1 1-2.027-2.027l6.252-6.341A3 3 0 0 1 13.778.1l-2.142 2.142L12 4l1.757.364 2.141-2.141zm-13.37 9.019L3.001 11l.471.242.529.026.287.445.445.287.026.529L5 13l-.242.471-.026.529-.445.287-.287.445-.529.026L3 15l-.471-.242L2 14.732l-.287-.445L1.268 14l-.026-.529L1 13l.242-.471.026-.529.445-.287.287-.445.529-.026z"/>
-</svg>
-</a>
-	</div>
-</div>
 
 
 <div class="main headerr " style="height: 100vh; width: 100%;">
