--- a/video.html
+++ b/video.html
@@ -62,7 +62,7 @@
   <div class="scorl">
   	<a href="index.html">Home</a>
   	<a href="video.html">Video</a>
-  	<a href="contact.html">Contact</a>
+  	<a href="tacontact.html">Contact</a>
   	<a href="download.html">Download</a>
   	<a href="editor.html">Editor</a>
   </div>
