--- a/video.html
+++ b/video.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+
+	gtag('config', 'UA-177943716-1');
+	</script>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Videos</title>
