--- a/video.html
+++ b/video.html
@@ -87,9 +87,16 @@
             <h2>Learn HTML in one video</h2>
             <p>This tutoral is made for begiiner. Watch the hole video after you also leran HTML poperly.</p>
             <a href="post/learn-html-in-one-video.html">
-            <button class="btn btn-outline-danger my-4">Start</button></a>
+            <button class="btn btn-outline-danger my-4">Start Watchnig</button></a>
             </div>
-
+		
+		<div class="col-md-6 col-lg-4 text-center">
+            <img class="rounded-circle" src="img/bgh.jpg" width="140px" height="140px">
+            <h2>Learn CSS in one video</h2>
+            <p>This tutoral is made for begiiner. Watch the hole video after you also leran CSS poperly.</p>
+            <a href="post/learn-css-in-one-video.html">
+            <button class="btn btn-outline-danger my-4">Start watching</button></a>
+            </div>
             
 
 
