--- a/video.html
+++ b/video.html
@@ -91,7 +91,7 @@
             </div>
 		
 		<div class="col-md-6 col-lg-4 text-center">
-            <img class="rounded-circle" src="img/bgh.jpg" width="140px" height="140px">
+            <img class="rounded-circle" src="img/css.png" width="140px" height="140px">
             <h2>Learn CSS in one video</h2>
             <p>This tutoral is made for begiiner. Watch the hole video after you also leran CSS poperly.</p>
             <a href="post/learn-css-in-one-video.html">
