--- a/index.html
+++ b/index.html
@@ -136,15 +136,19 @@
   <p class="text-center"><i>Contsct us. For any problem you also contact us </i></p>
   <a class="mx-auto d-block" href="contact.html"><button class="btn btn-primary">C O N T A C T</button></a>
   </div>
-	<script src="https://apis.google.com/js/platform.js"></script>
-
-<div class="g-ytsubscribe" data-channelid="UCc08XFzRz9cKi-ewjV36ibw" data-layout="full" data-theme="dark" data-count="default"></div>
+	
 
 </div>
 <!--card-group-end-->
 </div>
 
+<div class"container">
+	<script src="https://apis.google.com/js/platform.js"></script>
 
+<div class="g-ytsubscribe" data-channelid="UCc08XFzRz9cKi-ewjV36ibw" data-layout="full" data-theme="dark" data-count="default"></div>
+		</div>
+		
+		
 </div>
 
 <!--mainclose-->
