--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="The official site of techno akd.Techno akd is a  youtube channel whre you find latest tecgnoloy videos on android,windows and other thing">
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-177943716-1"></script>
 	<script>
@@ -10,10 +13,7 @@
 
 	gtag('config', 'UA-177943716-1');
 	</script>
-	<meta name="description" content="Techno akd is a  youtube channel whre you find latest tecgnoloy videos on android,windows and other thing">
-  	<meta name="keywords" content="HTML, CSS, JavaScript, Youtube, android, Google, Technoakd, techno kad,latest news, Technology">
-	<meta charset="UTF-8">
-  	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="keywords" content="HTML, CSS, JavaScript, Youtube, android, Google, Technoakd, techno kad,latest news, Technology">
 	<title>Technoakd| Home |YouTube videos</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 	<script src="js.js"></script>
