--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="The official site of techno akd.Techno akd is a  youtube channel whre you find latest tecgnoloy videos on android,windows and other thing">
+	<meta name="description" content="The official site of techno akd.Techno akd is a  youtube channel whre you find latest technology videos on android,windows and other thing">
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-177943716-1"></script>
 	<script>
@@ -119,8 +119,8 @@
   <div class="card py-3">
   <h3 class="text-center">Videos</h3>
   <img src="img/bgh.jpg" alt="Responsive image" class="rounded-circle mx-auto d-block" height="200px" width="200px">
-  <p class="text-center"><i>Go to  our youtube channel for get latest technology videos about android, YouTube,Windows,Photoshop eyc. For get updates also subscribe The Techno Akd YouTube channel.</i></p>
-  <a class="mx-auto d-block" href="index.html"><button class="btn btn-primary">Watch now</button></a>
+  <p class="text-center"><i>Go to  our youtube channel for get latest technology videos about android, YouTube,Windows,Photoshop etc. For get updates also subscribe The Techno Akd YouTube channel.</i></p>
+  <a class="mx-auto d-block" href="video.html"><button class="btn btn-primary">Watch now</button></a>
   </div>
 
   <div class="card py-3">
