--- a/editor.html
+++ b/editor.html
@@ -74,13 +74,15 @@
 		}
 		textarea{height: 600px;
 		width: 100%; 
-		padding: 2.5rem;
+		padding: 15px;
+		color:#bdbdbd;
 		letter-spacing: 1px;
 		resize: none; } 
 		textarea, 
 		iframe { 
 		    display: block; 
 		    margin: 10px 0; 
+			
 		} 
 		  
 		iframe { 
@@ -137,7 +139,7 @@
 <!--navclose-->
 
 <div class="main headerr container">
-	<textarea rows="2" cols="40" >
+	<textarea class="bg-dark" rows="2" cols="40" >
 <!DOCTYPE html>
 <html lang="en">
 <head>
