--- a/editor.html
+++ b/editor.html
@@ -1,145 +1,176 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-177943716-1"></script>
-	<script>
-	window.dataLayer = window.dataLayer || [];
-	function gtag(){dataLayer.push(arguments);}
-	gtag('js', new Date());
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-177943716-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
-	gtag('config', 'UA-177943716-1');
-	</script>
-	<meta charset="UTF-8">
-  	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Technoakd| Editor |YouTube videos</title>
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-	<script src="js.js"></script>
-	<link rel="icon" href="img/logo.jpg" type="image/gif" sizes="16x16">
-	<style>
-		nav
-		{
-			height: auto;
-			width: 100%;
-			box-shadow: 2px 2px 5px;
-			padding: .5rem;
-			top: 0;
-			left: 0;
-			z-index: 9999999;
-			background-color: #ec2436;
-		}
-		
-		
-		.navbar-brand
-		{
-			color: #fff;
-		}
-		.navbar-brand:hover
-		{
-			color: #fff;
-		}
-		.scorl
-		{
-			display: flex;
-			color: #fff;
-			overflow-x: scroll;
-		}
-		.scorl a
-		{
-			text-decoration: none;
-			color: #fff;
-			padding-left: 1em;
-		}
-		.scorl::-webkit-scrollbar 
-		{
-  			width: 2px;
-		}
-		.scorl::-webkit-scrollbar-thumb 
-		{
-		    background: grey; 
-		    border-radius: 0px;
-		}
-		.scorl::-webkit-scrollbar-thumb 
-		{
-			background: rgba(0,0,0,0.8); 
-			border-radius: 0;
-		}
-		.headerr
-		{
-			margin-top: 90px;
-		}
-		.space
-		{
-			height: 20rem;width: 100%;
-		}
-		textarea{height: 600px;
-		width: 100%; 
-		padding: 15px;
-		color:#bdbdbd;
-		letter-spacing: 1px;
-		resize: none; } 
-		textarea, 
-		iframe { 
-		    display: block; 
-		    margin: 10px 0; 
-			
-		} 
-		  
-		iframe { 
-		    width: 100%;
-		    height: 500px; 
-		    border: 1px solid #000000; 
-		    background-color: #fff;
-		    } 
-		button {background-color: #0072FF;
-		        height: 50px;
-		        width: 120px;
-		        border: none;
-		        border-radius: 5px;
-		        outline: none;
-		       color: #fff;
-		        font-size: 20px;
-		        margin-left: calc(50%);
-		        transform: translate(-50%);}
-		.add {
-			height: 120px;
-			width: 720px; 
-			margin-left: calc(50%); 
-			transform: translate(-50%);
-			border: 2px solid #fff;
-			}
-		.cl {
-			height: 300px;
-			width: 320px;
-			margin-left: calc(50%);
-			transform: translate(-50%);
-			border: 2px solid black   
-			}
-		.out {height: 50px;
-			width: 320px;
-			font-size: 30px;
-			margin-left: calc(50%);
-			transform: translate(-50%);
-		}   
-	</style>
+        gtag('config', 'UA-177943716-1');
+    </script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Technoakd| Editor |YouTube videos</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <script src="js.js"></script>
+    <link rel="icon" href="img/logo.jpg" type="image/gif" sizes="16x16">
+    <style>
+        nav {
+            height: auto;
+            width: 100%;
+            box-shadow: 2px 2px 5px;
+            padding: .5rem;
+            top: 0;
+            left: 0;
+            z-index: 9999999;
+            background-color: #ec2436;
+        }
+
+        textarea::-webkit-scrollbar {
+            width: 10px;
+        }
+
+        textarea::-webkit-scrollbar-track {
+            background: #f1f1f1;
+        }
+
+        textarea::-webkit-scrollbar-thumb {
+            background: #888;
+        }
+
+        textarea::-webkit-scrollbar-thumb:hover {
+            background: #555;
+        }
+
+        .navbar-brand {
+            color: #fff;
+        }
+
+        .navbar-brand:hover {
+            color: #fff;
+        }
+
+        .scorl {
+            display: flex;
+            color: #fff;
+            overflow-x: scroll;
+        }
+
+        .scorl a {
+            text-decoration: none;
+            color: #fff;
+            padding-left: 1em;
+        }
+
+        .scorl::-webkit-scrollbar {
+            width: 2px;
+        }
+
+        .scorl::-webkit-scrollbar-thumb {
+            background: grey;
+            border-radius: 0px;
+        }
+
+        .scorl::-webkit-scrollbar-thumb {
+            background: rgba(0, 0, 0, 0.8);
+            border-radius: 0;
+        }
+
+        .headerr {
+            margin-top: 90px;
+        }
+
+        .space {
+            height: 20rem;
+            width: 100%;
+        }
+
+        textarea {
+            height: 600px;
+            width: 100%;
+            padding: 15px;
+            color: #bdbdbd;
+            letter-spacing: 1px;
+            resize: none;
+        }
+
+        textarea,
+        iframe {
+            display: block;
+
+        }
+
+        iframe {
+            width: 100%;
+            height: 500px;
+            border: 1px solid #000000;
+            background-color: #fff;
+        }
+
+        button {
+            background-color: #0072FF;
+            height: 50px;
+            width: 120px;
+            border: none;
+            border-radius: 5px;
+            outline: none;
+            color: #fff;
+            font-size: 20px;
+            position: relative;
+            left: calc(50%);
+            transform: translate(-50%);
+        }
+
+        .add {
+            height: 120px;
+            width: 720px;
+            margin-left: calc(50%);
+            transform: translate(-50%);
+            border: 2px solid #fff;
+        }
+
+        .cl {
+            height: 300px;
+            width: 320px;
+            position: relative;
+            left: calc(50%);
+            transform: translate(-50%);
+            border: 2px solid black
+        }
+
+        .out {
+            height: 50px;
+            width: 320px;
+            font-size: 30px;
+            position: relative;
+            left: calc(50%);
+            transform: translate(-50%);
+        }
+    </style>
 </head>
-<body>
-<nav>
-	<a class="navbar-brand" href="index.html">
-    <img class="rounded-circle" height="50px" width="50px" src="img/logo.jpg"><span style="padding-left: 2rem;"><b>Techno Akd</b></span>
-  </a>
-  <div class="scorl">
-  	<a href="index.html">Home</a>
-  	<a href="video.html">Video</a>
-  	<a href="tacontact.html">Contact</a>
-  	<a href="download.html">Download</a>
-  	<a href="editor.html">Editor</a>
-  </div>
-</nav>
-<!--navclose-->
 
-<div class="main headerr container">
-	<textarea class="bg-dark" rows="2" cols="40" >
+<body>
+    <nav>
+        <a class="navbar-brand" href="index.html">
+            <img class="rounded-circle" height="50px" width="50px" src="img/logo.jpg"><span
+                style="padding-left: 2rem;"><b>Techno Akd</b></span>
+        </a>
+        <div class="scorl">
+            <a href="index.html">Home</a>
+            <a href="video.html">Video</a>
+            <a href="tacontact.html">Contact</a>
+            <a href="download.html">Download</a>
+            <a href="editor.html">Editor</a>
+        </div>
+    </nav>
+    <!--navclose-->
+
+    <div class="main headerr container">
+        <textarea class="bg-dark" rows="2" cols="40">
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -152,36 +183,44 @@
 </body>
 </html>   
       </textarea>
-      
-        <button type="button" onclick="updateIframe()"> 
-          RuN
-      </button> 
+
+        <button type="button" onclick="updateIframe()">
+            RuN
+        </button>
         <iframe style="text-align:center;" id="myframe"></iframe> </div>
-        <h1 style="color: #602f9d; text-align: center; font-family: Lucida Handwriting">Choice your CSS color</h1>
-        <br>
-        <input class="cl" type="color" id="send" oninput="result.value=send.value"><br><br><br><input class="out" type="text" id="result"><br><br>
-        <script type="text/javascript"> 
-            function updateIframe() { 
-                var myFrame = $("#myframe").contents().find('body'); 
-                var textareaValue = $("textarea").val(); 
-                myFrame.html(textareaValue); 
-            } 
-        </script> 
-    </center> 
-</div>
+    <h1 style="color: #602f9d; text-align: center; font-family: Lucida Handwriting">Choice your CSS color</h1>
+    <br>
+    <input class="cl" type="color" id="send" oninput="result.value=send.value"><br><br><br><input class="out"
+        type="text" id="result"><br><br>
+    <script type="text/javascript">
+        function updateIframe() {
+            var myFrame = $("#myframe").contents().find('body');
+            var textareaValue = $("textarea").val();
+            myFrame.html(textareaValue);
+        } 
+    </script>
+    </center>
+    </div>
 
 
 
 
-<footer style="padding: 3rem;" class="bg-dark">
-	<h4  class="text-center">
-		<a style="text-decoration: none; color: #fff;" href="index.html">Techno Akd</a>
-	</h4>
-	<p style="color: #fff;" class="text-center">Techno Akd YouTube channel</p>
-</footer>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <footer style="padding: 3rem;" class="bg-dark">
+        <h4 class="text-center">
+            <a style="text-decoration: none; color: #fff;" href="index.html">Techno Akd</a>
+        </h4>
+        <p style="color: #fff;" class="text-center">Techno Akd YouTube channel</p>
+    </footer>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+        crossorigin="anonymous"></script>
 
 </body>
+
 </html>
