--- a/editor.html
+++ b/editor.html
@@ -90,36 +90,14 @@
         }
 
         textarea {
-            height: 600px;
-            width: 100%;
-            padding: 15px;
             color: #bdbdbd;
             letter-spacing: 1px;
             resize: none;
-        }
-
-        textarea,
-        iframe {
-            display: block;
-
-        }
-
-        iframe {
-            width: 100%;
-            height: 500px;
-            border: 1px solid #000000;
-            background-color: #fff;
+            border-radius: 10px;
+            box-shadow: 0 0 10px black;
         }
 
         button {
-            background-color: #0072FF;
-            height: 50px;
-            width: 120px;
-            border: none;
-            border-radius: 5px;
-            outline: none;
-            color: #fff;
-            font-size: 20px;
             position: relative;
             left: calc(50%);
             transform: translate(-50%);
@@ -141,7 +119,12 @@
             transform: translate(-50%);
             border: 2px solid black
         }
-
+        iframe
+        {
+            border: none;
+            border-radius: 10px;
+            box-shadow: 0 0 10px black;
+        }
         .out {
             height: 50px;
             width: 320px;
@@ -168,9 +151,15 @@
         </div>
     </nav>
     <!--navclose-->
+    <div class="alert"></div>
 
-    <div class="main headerr container">
-        <textarea class="bg-dark" rows="2" cols="40">
+    <button class="my-2 btn btn-success py-3" type="button" onclick="updateIframe()">
+        RuN
+    </button>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-sm">
+                <textarea style="width: 100%; height: 500px;" class="bg-dark" rows="2" cols="40">
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -182,12 +171,15 @@
     
 </body>
 </html>   
-      </textarea>
+            </textarea>
+            </div>
+            <div class="col-sm">
+                <iframe style="height: 500px; width: 100%;" style="text-align:center;" id="myframe"></iframe>
+            </div>
 
-        <button type="button" onclick="updateIframe()">
-            RuN
-        </button>
-        <iframe style="text-align:center;" id="myframe"></iframe> </div>
+        </div>
+    </div>
+
     <h1 style="color: #602f9d; text-align: center; font-family: Lucida Handwriting">Choice your CSS color</h1>
     <br>
     <input class="cl" type="color" id="send" oninput="result.value=send.value"><br><br><br><input class="out"
@@ -224,3 +216,26 @@
 </body>
 
 </html>
+
+<div class="container-fluid">
+    <div class="row">
+        <div class="col">
+            <textarea class="bg-dark" rows="2" cols="40">
+                <!DOCTYPE html>
+                <html lang="en">
+                <head>
+                    <meta charset="UTF-8">
+                    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+                    <title>Document</title>
+                </head>
+                <body>
+                    
+                </body>
+                </html>   
+                      </textarea>
+        </div>
+        <div class="col">
+            <iframe style="text-align:center;" id="myframe"></iframe>
+        </div>
+    </div>
+</div>
