--- a/omnisd.html
+++ b/omnisd.html
@@ -1,6 +1,14 @@
 <!doctype html>
 <html lang="en">
   <head>
+	  <meta name="google-site-verification" content="8AJh76qXQPwX5qRCztTTNeMkwyCXmzYXgGtwny2IWgM" />
+	  <script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+
+	gtag('config', 'UA-177943716-1');
+	</script>
     <meta charset="utf-8">
     <meta name="description" content="Watch the page get info about omnisd. The installing process of omnisd on kaios phone and jio phone.">
     <meta name="keywords" content="What is Omnisd,What is kaios,How to install Omnisd,How do I download Omnisd,What is the use of Omnisd,Is KaiOS based on Android,How do I download an OmniSD zip file,How do I get my Jio phone into recovery mode,What is a KaiOS phone ,Omnisd, jio phone, kaiso , root , recovery , install ">
