--- a/omnisd.html
+++ b/omnisd.html
@@ -15,7 +15,7 @@
     <meta name="author" content="Techno akd">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <title>Omnisd | Omnisd full guide | What is Omnisd | How do I download Omnisd |</title>
+    <title>How to install omnisd by techno akd|Omnisd | Omnisd full guide | What is Omnisd | How do I download Omnisd |</title>
     <style>
     	.alerttxt{
     		color: red;
