--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
   <div class="scorl">
   	<a href="index.html">Home</a>
   	<a href="video.html">Video</a>
+	<a href="omnisd.html">Omnisd guide</a>
   	<a href="tacontact.html">Contact</a>
   	<a href="download.html">Download</a>
   	<a href="editor.html">Editor</a>
