--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 	<a href="omnisd.html">Omnisd guide</a>
   	<a href="tacontact.html">Contact</a>
   	<a href="download.html">Download</a>
-  	<a href="editor.html">Editor</a>
+  	<a href="https://technologygurubhai.github.io/Editor/">Editor</a>
   </div>
 </nav>
 
