--- a/index.html
+++ b/index.html
@@ -1,166 +1,153 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
+
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="The official site of techno akd.Techno akd is a  youtube channel whre you find latest technology videos on android,windows and other thing">
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-177943716-1"></script>
-	<script>
-	window.dataLayer = window.dataLayer || [];
-	function gtag(){dataLayer.push(arguments);}
-	gtag('js', new Date());
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Techno Akd | Techno Akd Video | Technology Videos and shorts videos | Tech Channel</title>
+    <meta name="description"
+        content="Techno Akd is place where you find greate videos and shorts tricks, Edit and compile code with this our site. A greate place to find tech content.">
+    <meta name="keywords"
+        content="Techno Akd, Youtube, Youtube videos, Tech Videos, Website, editor, Tech Review, Tech Blogs, CSS, JavaScript, Youtube, android, Google, Technoakd, techno akd,latest news, Technology">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-177943716-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
-	gtag('config', 'UA-177943716-1');
-	</script>
-	<meta name="keywords" content="HTML, CSS, JavaScript, Youtube, android, Google, Technoakd, techno kad,latest news, Technology">
-	<title>Technoakd| Home |YouTube videos</title>
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-	<script src="js.js"></script>
-	<link rel="icon" href="img/logo.jpg" type="image/gif" sizes="16x16">
-	<link rel="stylesheet" type="text/css" href="stylee.css">
-  <meta name="google-site-verification" content="8AJh76qXQPwX5qRCztTTNeMkwyCXmzYXgGtwny2IWgM" />
-<style>
-	nav
-		{
-			height: auto;
-			width: 100%;
-			box-shadow: 2px 2px 5px;
-			padding: .5rem;
-			top: 0;
-			left: 0;
-			z-index: 9999999;
-			background-color: #ec2436;
-		}
-		
-		
-		.navbar-brand
-		{
-			color: #fff;
-		}
-		.navbar-brand:hover
-		{
-			color: #fff;
-		}
-		.scorl
-		{
-			display: flex;
-			color: #fff;
-			overflow-x: scroll;
-		}
-		.scorl a
-		{
-			text-decoration: none;
-			color: #fff;
-			padding-left: 1em;
-		}
-		.scorl::-webkit-scrollbar 
-		{
-  			width: 2px;
-		}
-		.scorl::-webkit-scrollbar-thumb 
-		{
-		    background: grey; 
-		    border-radius: 0px;
-		}
-		.scorl::-webkit-scrollbar-thumb 
-		{
-			background: rgba(0,0,0,0.8); 
-			border-radius: 0;
-		}
-	</style>
-
-	
+        gtag('config', 'UA-177943716-1');
+    </script>
+    <meta property="og:image" content="https://technologygurubhai.github.io/technoakd/img/logo.jpg" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="436" />
+    <meta property="og:image:height" content="228" />
+    <meta property="og:description" content="Techno Akd is place where you find greate videos and shorts tricks, Edit and compile code with this our site. A greate place to find tech content." />
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <style>
+        /* .edi {
+            height: 100vh;
+        } */
+        .edi img {
+            box-shadow: 0 0 100px black;
+        }
+    </style>
 </head>
 
-	<body>
-<nav>
-	<a class="navbar-brand" href="index.html">
-    <img class="rounded-circle" height="50px" width="50px" src="img/logo.jpg"><span style="padding-left: 2rem;"><b>Techno Akd</b></span>
-  </a>
-  <div class="scorl">
-  	<a href="index.html">Home</a>
-  	<a href="video.html">Video</a>
-	<a href="omnisd.html">Omnisd guide</a>
-  	<a href="tacontact.html">Contact</a>
-  	<a href="download.html">Download</a>
-  	<a href="https://technologygurubhai.github.io/Editor/">Editor</a>
-  </div>
-</nav>
+<body>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="index.html">Techno Akd</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-link" href="/editor">Editor</a>
+                    <a class="nav-link" href="omnisd.html">Omnisd Guide</a>
+                    <a class="nav-link" href="tcontact.html">Contact US</a>
+                </div>
+            </div>
+        </div>
+    </nav>
+    <div class="header">
+        <div class="edi bg-dark">
+            <br><br><br>
+            <div class="row">
+                <div class="col-sm">
+                    <img class="rounded mx-auto d-block" src="img/ss.PNG" alt="editor" height="90%" width="90%">
+                </div>
+                <div class="col-sm pt-3">
+                    <h1 class="text-center text-white">
+                        Online Editor
+                    </h1>
+                    <p class="text-center text-white">
+                        Try our Online editor whic is super fast and super cool...
+                    </p>
+                    <button class="btn btn-primary mx-auto d-block">Try Now</button>
+                </div>
+            </div>
+            <br><br>
+            <div class="row">
+                <div class="col-sm text-center text-white">
+                    <i class="material-icons text-white" style="font-size: 75px;">
+                        bolt
+                    </i>
+                    <p class="p-4">
+                        Super fast and super powerful editor for your next project
+                    </p>
+                </div>
+                <div class="col-sm text-center text-white">
+                    <i class="material-icons text-white text-center" style="font-size: 75px;">
+                        sync
+                    </i>
+                    <p class="p-4">
+                        Realtime code exicution no need to ress the run button again and again
+                    </p>
+                </div>
+                <div class="col-sm text-center text-white">
+                    <i class="material-icons text-white text-center" style="font-size: 75px;">
+                        dark_mode
+                    </i>
+                    <p class="p-4">
+                        Multiple themes valiable for your project
+                    </p>
+                </div>
+            </div>
+            <br>
+            <button class="btn btn-success mx-auto d-block">Try Now our editor</button>
+            <br>
 
-<div style="padding: rem;" class="slider">
-			<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-		  <div class="carousel-inner">
-		    <div class="carousel-item active">
-		      <img height="100%" width="100%" src="immg/cod.jpg" class="d-block w-100" alt="...">
-		    </div>
-		    <div class="carousel-item">
-		      <img height="100%" width="100%" src="immg/com.jpg" class="d-block w-100" alt="...">
-		    </div>
-		    <div class="carousel-item">
-		      <img height="100%" width="100%" src="immg/sr.jpg" class="d-block w-100" alt="...">
-		    </div>
-		  </div>
-		  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-		    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-		    <span class="sr-only">Previous</span>
-		  </a>
-		  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-		    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-		    <span class="sr-only">Next</span>
-		  </a>
-		</div>
-</div>
+        </div>
+    </div>
+    <!--card group-->
+    <div class="container">
+        <div class="card-group my-4 py-4">
+            <div class="card py-3">
+                <h3 class="text-center">Videos</h3>
+                <img src="img/bg_1.jpg" alt="Responsive image" class="rounded-circle mx-auto d-block" height="200px"
+                    width="200px">
+                <p class="text-center"><i>Go to our youtube channel for get latest technology videos. Watch and
+                        enjoy.</i></p>
+                <a class="mx-auto d-block" href="video.html"><button class="btn btn-primary">Watch now</button></a>
+            </div>
+
+            <div class="card py-3">
+                <h3 class="text-center">Code Editor</h3>
+                <img src="img/ss.PNG" alt="Responsive image" class="rounded-circle mx-auto d-block" height="200px"
+                    width="200px">
+                <p class="text-center"><i>Go to our Editor section where you Edit HTML,CSS,JavaScript etc.</i></p>
+                <a class="mx-auto d-block" href="editor.html"><button class="btn btn-primary">Try now</button></a>
+            </div>
+
+            <div class="card py-3">
+                <h3 class="text-center">Contact Us</h3>
+                <img src="img/bg_3.jpg" alt="Responsive image" class="rounded-circle mx-auto d-block" height="200px"
+                    width="200px">
+                <p class="text-center"><i>Contsct us. For any problem you also contact us </i></p>
+                <a class="mx-auto d-block" href="contact.html"><button class="btn btn-primary">Contact Now
+                    </button></a>
+            </div>
 
 
-	
-	<!--card group-->
-	<div class="container">
-<div class="card-group my-4 py-4">
-  <div class="card py-3">
-  <h3 class="text-center">Videos</h3>
-  <img src="img/bgh.jpg" alt="Responsive image" class="rounded-circle mx-auto d-block" height="200px" width="200px">
-  <p class="text-center"><i>Go to  our youtube channel for get latest technology videos about android, YouTube,Windows,Photoshop etc. For get updates also subscribe The Techno Akd YouTube channel.</i></p>
-  <a class="mx-auto d-block" href="video.html"><button class="btn btn-primary">Watch now</button></a>
-  </div>
+        </div>
+        <!--card-group-end-->
+    </div>
 
-  <div class="card py-3">
-  <h3 class="text-center">Html editor</h3>
-  <img src="img/bggg.jpg" alt="Responsive image" class="rounded-circle mx-auto d-block" height="200px" width="200px">
-  <p class="text-center"><i>Go to our Editor section where you Edit HTML,CSS,JavaScript etc.</i></p>
-  <a class="mx-auto d-block" href="editor.html"><button class="btn btn-primary">Watch now</button></a>
-  </div>
+    <footer style="padding: 3rem;" class="bg-dark">
+        <h4 class="text-center">
+            <a style="text-decoration: none; color: #fff;" href="index.html">Techno Akd</a>
+        </h4>
+        <p style="color: #fff;" class="text-center">Techno Akd YouTube channel</p>
+    </footer>
 
-  <div class="card py-3">
-  <h3 class="text-center">Contact Us</h3>
-  <img src="img/bgg.jpg" alt="Responsive image" class="rounded-circle mx-auto d-block" height="200px" width="200px">
-  <p class="text-center"><i>Contsct us. For any problem you also contact us </i></p>
-  <a class="mx-auto d-block" href="contact.html"><button class="btn btn-primary">C O N T A C T</button></a>
-  </div>
-	
-
-</div>
-<!--card-group-end-->
-</div>
-
-
-		
-		
-</div>
-
-<!--mainclose-->
-
-
-
-<footer style="padding: 3rem;" class="bg-dark">
-	<h4  class="text-center">
-		<a style="text-decoration: none; color: #fff;" href="index.html">Techno Akd</a>
-	</h4>
-	<p style="color: #fff;" class="text-center">Techno Akd YouTube channel</p>
-</footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
-
-
-
-
