--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-link" href="https://kpower.netlify.app/">Editor</a>
+                    <a class="nav-link" href="https://onroadhtml.netlify.app/">Editor</a>
                     <a class="nav-link" href="omnisd.html">Omnisd Guide</a>
                     <a class="nav-link" href="tcontact.html">Contact US</a>
                 </div>
@@ -68,7 +68,7 @@
                     <p class="text-center text-white">
                         Try our Online editor whic is super fast and super cool...
                     </p>
-                    <a href="https://kpower.netlify.app/"><button class="btn btn-primary mx-auto d-block">Try Now</button></a>
+                    <a href="https://onroadhtml.netlify.app/"><button class="btn btn-primary mx-auto d-block">Try Now</button></a>
                 </div>
             </div>
             <br><br>
@@ -99,7 +99,7 @@
                 </div>
             </div>
             <br>
-            <a href="https://kpower.netlify.app/"><button class="btn btn-success mx-auto d-block">Try Now our editor</button></a>
+            <a href="https://onroadhtml.netlify.app/"><button class="btn btn-success mx-auto d-block">Try Now our editor</button></a>
             <br>
 
         </div>
