--- a/doctor/service.html
+++ b/doctor/service.html
@@ -161,6 +161,8 @@
             </div>
         </section>
     </main>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="scripts/app.js"></script>
     <script>
         document.getElementById('nav-toggle').onclick = function () {
             document.getElementById('nav-content').classList.toggle('hidden');
